# eeea-py

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS
.github/workflows/: test.yml
docs/: index.md
docs/FAQ/: citation.md
docs/changelog/: CHANGELOG.md
docs/developer/: CONTRIBUTING.md
docs/developer/tests/: index.md
docs/examples/: convergence-comparison.md  gwo-multimodal-case.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: api-overview.md
docs/reference/algorithms/: ees.md  emna.md  gwo.md  index.md  pso.md
docs/theory/: explicit-exploration.md
examples/basics/: example_ees_sphere.py  example_emna_sphere.py  example_gwp_sphere.py  example_pso_sphere.py  example_pso_sphere_ees.py
examples/others/: example_benchmark_log.py  example_pso_custom_func.py
examples/plotting/: example_plot_convergence.py
src/eeea_py/: __init__.py
src/eeea_py/algorithms/: EES.py  EMNA.py  GWO.py  PSO.py  __init__.py  ee.py  tests.py
src/eeea_py/benchmarks/: __init__.py  multimodal.py  unimodal.py
src/eeea_py/utils/: __init__.py  population_configuration.py  ranges_verification.py  results_management.py
tests/: test_ee.py  test_emna.py  test_gwo.py  test_import.py  test_pso.py
tests/edge_cases/: test_exceptions.py
tests/integration/: test_all_algorithm_api.py  test_emna_integration.py  test_gwo_integration.py  test_pso_integration.py
tests/robustness/: test_enma_robustness.py  test_gwo_robustness.py  test_pso_robustness.py
tests/stress/: test_algorithm_scalability.py  test_ees_tolerance_limits.py
tests/unit/: test_ee.py  test_population_configuration.py  test_ranges_verification.py  test_results_management.py
