[project]
name = "eeea-py"
version = "0.0.1"
authors = [
  { name="Rogelio Salinas", email="rogelio.salinas.gutierrez@gmail.com" },
  { name="Enrique Gomez", email="ing.enrique_gomez@outlook.com" },
  { name="Victoria Galvan", email="galvand.victoria@gmail.com" },
  { name="Juan De Dios", email="halowolf213@gmail.com" },
  { name="Jessica Medina", email="jessvimm@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rogelio-sg/eeea-py"


[tool.setuptools.packages.find]
# Designates the 'src' directory as the primary location for package source discovery.
where = ["src"]

[tool.pytest.ini_options]
# Extends the Python search path to include the 'src' directory, enabling cleaner
# absolute imports and facilitating proper module resolution during testing.
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
# Enables automatic discovery and inclusion of non-Python resource files 
# located within the package subdirectories.
include-package-data = true