[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeea-py"
version = "1.0.0"
description = "Explicit Exploration strategies and evolutionary metaheuristics for continuous optimization."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"

authors = [
  { name="Rogelio Salinas", email="rogelio.salinas.gutierrez@gmail.com" },
  { name="Enrique Gomez", email="ing.enrique_gomez@outlook.com" },
  { name="Victoria Galvan", email="galvand.victoria@gmail.com" },
  { name="Juan De Dios", email="halowolf213@gmail.com" },
  { name="Jessica Medina", email="jessvimm@gmail.com" },
  { name="Carlos Lopez", email="carlos.lopezh@edu.uaa.mx" },
  { name="Ilse Saldivar", email="al227455@edu.uaa.mx" }
]

dependencies = [
    "numpy>=1.26.4,<3"
]

keywords = [
    "optimization",
    "metaheuristics",
    "evolutionary-algorithms",
    "EDA",
    "EMNA",
    "PSO",
    "GWO",
    "explicit-exploration"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rogelio-sg/eeea-py"
Repository = "https://github.com/rogelio-sg/eeea-py"
Documentation = "https://rogelio-sg.github.io/eeea-py/"
Issues = "https://github.com/rogelio-sg/eeea-py/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "stress: long-running scalability and limits tests that are skipped unless RUN_STRESS_TESTS=1 is set",
]

[tool.setuptools]
include-package-data = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=9.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.0.0",
    "evobench-lib>=1.0.0"
]
docs = [
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=9.0.0",
    "mkdocs>=1.4.0"
]
science = [
    "scikit-learn>=1.2.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0"
]